--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
- I was born at Blackwood hospital in 1988 and have spent almost all of my life in Waite.<br>
+ I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.<br>
  I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament,<br>
  and now I have a plan.</p>
 
@@ -503,7 +503,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500&#8239;000 per year (or more than ten times above the median average income).</p>
 
-<p>The tax system should be designed to prevent individuals from earning more than 10 times more in net lifetime income than the median lifetime income, and if they have already earned more than this in net income, their assets should be taxed if necessary to compensate.<br>
+<p>The tax system should be designed to prevent individuals from earning more than 10 times the median lifetime income, and if they have already earned more than this in net income, their assets should be taxed if necessary to compensate.<br>
 </p>
 
 <h4 id="1.4_Wages">Increase wages faster and reduce unemployment<br>
