--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ I will be posting more short videos on Youtube and social media between now and 
  <li>Solve the <a href="#12.0_Police_Support">police staffing crisis</a>;</li>
  <li>Protect our children, women and men from <a href="#19.0_Wellbeing">unfair treatment and harm</a>, including from <a href="#19.4_Regulate_Advertising">harmful advertising</a>;</li>
  <li>Solve the <a href="#10.0_SAES">unemployment and underemployment crisis</a>;</li>
- <li>Solve <a href="#18.0_Education_and_Music">education</a> and local <a href="#18.2_Support_Artists">music</a>;</li>
+ <li>Support <a href="#18.0_Education_and_Music">education</a> and local <a href="#18.2_Support_Artists">music</a>;</li>
  <li>Support measures to <a href="#20.0_Non-violence">protect animals from unnecessary harm and cruelty</a>;</li>
  <li>Forge a <a href="#beyondpolicy">better way of doing politics</a> and a <a href="#17.0_Democratise">more democratic political system</a>;</li>
  <li>Increase the <a href="#17.0_Democratise">accountability, efficiency and competence of our parliament</a> and our policy-making.</li>
