--- a/index.html
+++ b/index.html
@@ -869,9 +869,9 @@ I will be posting more short videos on Youtube and social media between now and 
  <li>17.2.3 Provide ICAC the resources and oversight to ensure they thoroughly investigate corporations, politicians and political parties for this type of interference in recent elections.</li>
 </ul>
 
-<h4><a href="#18.0_Education_and_Music">Education and Music</a>
+<h3><a href="#18.0_Education_and_Music">Education and Music</a>
 <small>(18.0_Education_and_Music)</small>
-</h4>
+</h3>
 
 <ul>
  <li>
@@ -1039,17 +1039,10 @@ I will be posting more short videos on Youtube and social media between now and 
 <p>If I am elected, I won't be resigned to what I can do within State Parliament to influence state policy as a single MP. I will use the platform of State Parliament to support the movement towards a better democracy, which will influence both the state and federal government to do better.</p>
 
 </section> <!-- beyondpolicy -->
-<!-- <section id="about" class="content-section responsive-width">
 
-<h2>About Me</h2>
+<section id="about" class="content-section responsive-width">
 
-<p></p>
-
-</section> --> <!-- about -->
-
-<section id="experience" class="content-section responsive-width">
-
-<h2>More about me</h2>
+<h2>About me</h2>
 
 <iframe width="382" height="679" src="https://www.youtube.com/embed/Qf22wA-NNSs" title="Am I experienced enough to be a good independent for Waite?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -1059,7 +1052,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <iframe width="388" height="690" src="https://www.youtube.com/embed/OWj7d4cm4BM" title="Why experience isn&#39;t always a good sign." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-</section> <!-- experience -->
+</section> <!-- aboutme -->
 
 <section id="reading" class="content-section responsive-width">
 
