--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 
 <p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
  I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.<br>
- I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament,<br>
- and now I have a plan.</p>
+ I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament, and now I have a plan.</p>
 
 <p>An article about me and other independents running in South Australia will be published soon by InDaily.</p>
 
