--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 
 <p>Most people won't want to read all 10&#8239;000 words of the summary of my plan on this website, which is fine.<br>
 The most important ideas behind my campaign are explained in the 90-second videos that are found here and on my social media accounts.<br>
-I will be posting more short videos on Youtube and social media between now and the election going into specifics, and you can follow me there using the links above.</p>
+
+<p>You can find me on social media using the links above.</p>
 
 <p>Here is another 90-second video introducing some of the core ideas behind my campaign:</p>
 
