--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <p>Most people won't want to read all 10&#8239;000 words of the summary of my plan on this website, which is fine.<br>
 The most important ideas behind my campaign are explained in the 90-second videos that are found here and on my social media accounts.<br>
 
-<p>You can find me on social media using the links above.</p>
+<p>You can find me on social media using the links above. My <a href="https://www.facebook.com/profile.php?id=61586548203786">facebook page</a> is the most convenient place to watch all of my videos.</p>
 
 <p>Here is another 90-second video introducing some of the core ideas behind my campaign:</p>
 
