--- a/index.html
+++ b/index.html
@@ -829,7 +829,9 @@ The most important ideas behind my campaign are explained in the 90-second video
 
 <p>14.1.1 Reduce all major pollutants by over 50% by 2030, aiming for at least 75% total reduction in CO<sub>2</sub>e in both GWP20 and GWP100. Major atmospheric pollutants in South Australia are carbon dioxide (CO<sub>2</sub>), methane, nitrous oxide (N<sub>2</sub>O), nitrogen dioxide (NO<sub>2</sub>), and particulate matter including black carbon.</p>
 
-<p>14.1.2 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Greatly increase the frequency of bus services with a new electric bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
+<p>14.1.2.1 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Greatly increase the frequency of bus services with a new electric bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
+
+<p>14.1.2.2 Support active transport with bike paths and walking paths.</p>
 
 <p>14.1.3 Reduce agricultural emissions by taxing the export of slaughterhouse products according to the total pollution created. Parliament or the Quality of Life Commission could regulate the local sale of related products to guarantee supply of these products continues at a fair price for locals.</p>
 
