--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
 
 <section id="intro" class="content-section responsive-width">
 
+<img class="responsive-width" src="images/comparison_ad.png" alt="Alec Gargett comparison with Labor, Greens, One Nation and the Liberals"></img>
+
 <iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
@@ -1182,8 +1184,8 @@ function setIntroSmile(smileOn) {
 </script>
 
 <style>
-:root
-{   --font-family-heading: 'Merriweather', serif;
+:root {
+    --font-family-heading: 'Merriweather', serif;
     --font-family-body: 'Lato', sans-serif;
 
     /* Yellow theme specific colors */
@@ -1191,7 +1193,7 @@ function setIntroSmile(smileOn) {
     --colour-background-yellow: rgb(255, 238, 186);
     --colour-transparent-yellow: rgba(255, 255, 255, 0.3);
 
-    /* Shared light colors (used by both White and Yellow) */
+    /* Shared light colors */
     --colour-primary-light: rgb(13, 71, 161);
     --colour-secondary-light: rgb(0, 137, 123);
     --colour-text-light: rgb(33, 37, 41);
@@ -1215,339 +1217,236 @@ function setIntroSmile(smileOn) {
     --colour-transparent: rgb(244, 255, 255);
     --colour-text: var(--colour-text-light);
     --colour-text-muted: var(--colour-text-muted-light);
-    --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); }
+    --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+}
 
-html
-{   scroll-padding-top: 150px; 
-    scroll-behavior: smooth; }
+/* 1. GLOBAL BOX MODEL FIX */
+*, *::before, *::after {
+    box-sizing: border-box;
+}
 
+html {
+    scroll-padding-top: 150px; 
+    scroll-behavior: smooth;
+}
 
-body.dark-theme
-{   --colour-primary: var(--colour-primary-dark);
+body {
+    background-color: var(--colour-background);
+    color: var(--colour-text);
+    font-family: var(--font-family-body);
+    margin: 0;
+    line-height: 1.7;
+    font-size: 16px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* 2. STANDARDIZED LAYOUT CONTAINERS */
+.responsive-width {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 100%;
+}
+
+/* Fix for images to ensure they center and respect the grid */
+img.responsive-width {
+    display: block;
+    height: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+/* 3. THEME OVERRIDES */
+body.dark-theme {
+    --colour-primary: var(--colour-primary-dark);
     --colour-secondary: var(--colour-secondary-dark);
     --colour-transparent: var(--colour-transparent-dark); 
     --colour-surface: var(--colour-surface-dark);
     --colour-text: var(--colour-text-dark);
     --colour-text-muted: var(--colour-text-muted-dark);
-    
-    background: linear-gradient(to right, var(--colour-gradient-blue-dark), rgb(0, 0, 0), var(--colour-gradient-blue-dark)); }
+    background: linear-gradient(to right, var(--colour-gradient-blue-dark), rgb(0, 0, 0), var(--colour-gradient-blue-dark));
+}
 
-body.yellow-theme
-{   --colour-primary: var(--colour-primary-light);
+body.yellow-theme {
+    --colour-primary: var(--colour-primary-light);
     --colour-secondary: var(--colour-secondary-light);
     --colour-background: var(--colour-background-yellow);
     --colour-transparent: var(--colour-transparent-yellow); 
     --colour-surface: var(--colour-background-yellow);
     --colour-text: var(--colour-text-light);
     --colour-text-muted: var(--colour-text-muted-light);
+    background: linear-gradient(to right, var(--colour-yellow-dark), var(--colour-background-yellow), var(--colour-yellow-dark));
+}
 
-    background: linear-gradient(to right, var(--colour-yellow-dark), var(--colour-background-yellow), var(--colour-yellow-dark)); }
-
-html
-{   scroll-behavior: smooth; }
-
-body
-{   background-color: var(--colour-background);
-    color: var(--colour-text);
-    font-family: var(--font-family-body);
-    margin: 0;
-    line-height: 1.7;
-    font-size: 16px;
-    transition: background-color 0.3s ease, color 0.3s ease; }
-
-.responsive-width
-{   max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 20px; }
-
-h1, h2, h3
-{   font-family: var(--font-family-heading);
+/* 4. TYPOGRAPHY */
+h1, h2, h3 {
+    font-family: var(--font-family-heading);
     color: var(--colour-primary);
-    line-height: 1.3; }
+    line-height: 1.3;
+}
 
 h1 { font-size: 3rem; margin-bottom: 0.5rem; }
 h2 { font-size: 2.25rem; margin-top: 2.5rem; margin-bottom: 1.5rem; border-bottom: 2px solid var(--colour-secondary); padding-bottom: 0.5rem; }
 h3 { font-size: 1.5rem; margin-top: 2rem; }
 h4 { font-size: 1.2rem; }
 
-h3 small,
-h4 small {
-  display: block;
-  font-size: 0.8em;
-  line-height: 1; }
+h3 small, h4 small {
+    display: block;
+    font-size: 0.8em;
+    line-height: 1;
+}
 
 p { margin-bottom: 1rem; }
 
-a
-{   color: var(--colour-secondary);
+a {
+    color: var(--colour-secondary);
     text-decoration: none;
-    transition: color 0.2s ease; }
-a:hover
-{   text-decoration: underline;
-    color: var(--colour-primary); }
+    transition: color 0.2s ease;
+}
 
-ul
-{   list-style-type: disc;
-    padding-left: 20px; }
-li
-{   margin-bottom: 0.5rem; }
+a:hover {
+    text-decoration: underline;
+    color: var(--colour-primary);
+}
 
-.site-header
-{   background-color: rgba(255, 255, 255, 0.50);
+/* 5. HEADER */
+.site-header {
+    background-color: rgba(255, 255, 255, 0.50);
     box-shadow: var(--box-shadow);
     position: sticky;
     top: 0;
     z-index: 1000;
     width: 100%;
     transition: background-color 0.3s ease;
-    backdrop-filter: blur(5px); }
-body.dark-theme .site-header
-{   background-color: rgba(10, 15, 30, 0.50); }
-body.yellow-theme .site-header
-{   background-color: rgba(255, 253, 231, 0.50); }
+    backdrop-filter: blur(5px);
+}
 
-.header-content
-{   display: flex;
+body.dark-theme .site-header { background-color: rgba(10, 15, 30, 0.50); }
+body.yellow-theme .site-header { background-color: rgba(255, 253, 231, 0.50); }
+
+.header-content {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 70px; }
-.logo-group
-{   line-height: 1; }
-.logo
-{   font-family: var(--font-family-heading);
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: var(--colour-primary); }
-.logo:hover
-{   text-decoration: none; }
-.logo-subtitle
-{   font-size: 0.9rem;
-    font-weight: 400;
-    color: var(--colour-text-muted);
-    display: block; }
-.main-nav a
-{   color: var(--colour-text);
-    margin: 0 15px;
-    font-weight: 700; }
-#theme-toggle-button
-{   background-color: transparent;
+    height: 70px;
+}
+
+.logo-group { line-height: 1; }
+.logo { font-family: var(--font-family-heading); font-size: 1.5rem; font-weight: 700; color: var(--colour-primary); }
+.logo:hover { text-decoration: none; }
+.logo-subtitle { font-size: 0.9rem; font-weight: 400; color: var(--colour-text-muted); display: block; }
+.main-nav a { color: var(--colour-text); margin: 0 15px; font-weight: 700; }
+
+#theme-toggle-button {
+    background-color: transparent;
     border: 1px solid var(--colour-secondary);
     color: var(--colour-secondary);
     padding: 8px 12px;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.2s, color 0.2s; }
-#theme-toggle-button:hover
-{   background-color: var(--colour-secondary);
-    color: var(--colour-surface); }
+    transition: background-color 0.2s, color 0.2s;
+}
 
-.page-intro
-{   padding: 4rem 0;
-    text-align: center; }
+#theme-toggle-button:hover {
+    background-color: var(--colour-secondary);
+    color: var(--colour-surface);
+}
 
-.intro-content-box
-{   background-color: var(--colour-background);
+/* 6. INTRO SECTION */
+.page-intro {
+    padding: 4rem 0;
+    text-align: center;
+}
+
+.intro-content-box {
+    background-color: var(--colour-background);
     background-image: url('images/alec_gargett_adelaide_oval_torrens_river_202303_cropped.jpg');
     background-size: cover;
     background-position: right 25%;
     padding: 60px 20px;
     border-radius: 8px;
     box-shadow: var(--box-shadow);
-    transition: background-image 0.5s ease-in-out; }
-.intro-content-box.smile
-{   background-image: url('images/alec_gargett_adelaide_oval_torrens_river_202303_smile_cropped.jpg'); }
-.intro-content-box h1
-{   color: rgb(255, 255, 255);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); }
-.intro-content-box .subtitle
-{   font-size: 1.75rem;
+    transition: background-image 0.5s ease-in-out;
+}
+
+.intro-content-box.smile {
+    background-image: url('images/alec_gargett_adelaide_oval_torrens_river_202303_smile_cropped.jpg');
+}
+
+.intro-content-box h1 { color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); }
+.intro-content-box .subtitle {
+    font-size: 1.75rem;
     font-family: var(--font-family-body);
     font-weight: 300;
-    color: rgb(255, 255, 255);
+    color: white;
     margin: 0;
     border-bottom: none;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7); }
-.social-links
-{   display: flex;
-    justify-content: center;
-    gap: 1.5rem;
-    margin: 1.5rem 0 2rem; }
-.intro-content-box .social-links a
-{   color: rgb(255, 255, 255);
-    transition: color 0.2s ease, transform 0.2s ease;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); }
-.social-links a:hover
-{   color: var(--colour-secondary-dark);
-    transform: translateY(-2px);
-    text-decoration: none; }
-.social-links svg
-{   width: 32px;
-    height: 32px;
-    fill: currentColor; }
-.cta-buttons
-{   display: flex;
-    gap: 1rem;
-    justify-content: center; }
-.btn
-{   display: inline-block;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+}
+
+/* 7. CONTENT BLOCKS */
+.content-section {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: var(--colour-surface); 
+    margin: 2rem auto;
+    border-radius: 8px;
+    box-shadow: var(--box-shadow);
+}
+
+/* Dark mode specific paragraph styling */
+body.dark-theme .content-section p,
+body.dark-theme .content-section li {
+    background-color: rgb(0, 0, 0);
+    padding: 1rem;
+    border-radius: 5px;
+}
+
+body.dark-theme .content-section {
+    background-color: transparent;
+    box-shadow: none;
+}
+
+/* 8. BUTTONS & SOCIALS */
+.social-links { display: flex; justify-content: center; gap: 1.5rem; margin: 1.5rem 0 2rem; }
+.social-links svg { width: 32px; height: 32px; fill: currentColor; }
+
+.cta-buttons { display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; }
+.btn {
+    display: inline-block;
     padding: 12px 24px;
     border-radius: 5px;
     font-weight: 700;
     text-align: center;
-    transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease; }
-.btn:hover
-{   text-decoration: none;
-    transform: translateY(-2px);
-    box-shadow: 0 6px 12px rgba(0,0,0,0.15); }
-.btn-primary
-{   background-color: rgb(13, 71, 161);
-    color: rgb(255, 255, 255);
-    border: 2px solid rgb(13, 71, 161); }
-.btn-primary:hover
-{   background-color: rgb(21, 101, 192);
-    border-color: rgb(21, 101, 192); }
-.intro-content-box .btn-secondary
-{   background-color: rgba(0, 0, 0, 0.2);
-    color: rgb(255, 255, 255);
-    border: 2px solid rgb(255, 255, 255); }
-.intro-content-box .btn-secondary:hover
-{   background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0); }
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
 
-.content-section
-{   padding: 40px 20px;
-    background-color: var(--colour-surface); 
-    margin: 2rem auto;
-    border-radius: 8px;
-    box-shadow: var(--box-shadow); }
-body.dark-theme .content-section p,
-body.dark-theme .content-section li
-{   background-color: rgb(0, 0, 0);
-    padding: 1rem;
-    border-radius: 5px; }
-body.dark-theme .content-section
-{   background-color: rgba(0, 0, 0, 0); }
+.btn-primary { background-color: rgb(13, 71, 161); color: white; border: 2px solid rgb(13, 71, 161); }
+.intro-content-box .btn-secondary { background-color: rgba(0, 0, 0, 0.2); color: white; border: 2px solid white; }
+.intro-content-box .btn-secondary:hover { background-color: white; color: black; }
 
+/* 9. POLICY TOC */
 .policy-toc {
-    margin-top: 1.5rem;
-    padding: 15px;
+    margin: 1.5rem 0;
+    padding: 20px;
     border: 1px solid var(--colour-text-muted);
     border-radius: 8px;
     background-color: var(--colour-transparent);
 }
 
-.toc-list {
-    padding-left: 20px;
-    margin: 0;
-}
-
-.toc-list li::marker {
-    color: var(--colour-secondary);
-    font-weight: 700;
-    font-family: var(--font-family-heading);
-}
-
-.toc-list li {
-    margin-bottom: 15px;
-    line-height: 1.4;
-}
-
-.toc-list > li > a {
-    font-weight: 700;
-    color: var(--colour-primary); 
-    text-decoration: underline;
-    font-size: 1.1em;
-    transition: color 0.2s ease;
-    padding: 2px 0;
-}
-
-.toc-list > li > a:hover {
-    color: var(--colour-secondary);
-    text-decoration: underline;
-}
-
-.sub-toc-list {
-    list-style-type: none;
-    padding-left: 20px;
-    margin: 8px 0 0 0;
-    border-left: 3px solid var(--colour-text-muted);
-    transition: border-color 0.3s ease;
-}
-
-.sub-toc-list li {
-    margin-bottom: 5px;
-    font-size: 0.95em;
-    font-weight: 400;
-}
-
-.sub-toc-list a {
-    color: var(--colour-primary);
-    text-decoration: none;
-    transition: color 0.2s ease;
-}
-
-.sub-toc-list a:hover {
-    color: var(--colour-secondary);
-    text-decoration: underline;
-}
-
-body.dark-theme .policy-toc {
-    border-color: rgba(255, 255, 255, 0.1);
-    color: white;
-}
-
-body.dark-theme .policy-toc a,
-body.dark-theme .policy-toc li {
-    color: white;
-}
-
-body.dark-theme .toc-list > li > a {
-    color: white;
-}
-body.dark-theme .toc-list > li > a:hover {
-    color: var(--colour-secondary-dark);
-}
-
-body.dark-theme .sub-toc-list > li > a:hover {
-    color: var(--colour-secondary-dark);
-}
-
-
-.contact-email
-{   font-size: 1.2rem;
-    text-align: center;
-    margin-top: 2rem; }
-.disclaimer
-{   font-style: italic;
-    color: var(--colour-text-muted);
-    font-size: 0.9rem; }
-body.dark-theme .disclaimer
-{   background-color: transparent;
-    padding: 0; }
-
-.site-footer
-{   background-color: black;
+/* 10. FOOTER */
+.site-footer {
+    background-color: black;
     color: white;
     padding: 20px 0;
     text-align: center;
-    font-size: 0.9rem; }
+    font-size: 0.9rem;
+    width: 100%;
+}
 
-.site-footer a
-{   color: rgb(155, 255, 255);
-    text-decoration: underline; }
-
-.site-footer a:hover
-{   color: rgb(0, 200, 255); }
-
-body.yellow-theme .site-footer a
-{   color: rgb(255, 255, 155); }
-
-body.yellow-theme .site-footer a:hover
-{   color: rgb(233, 233, 0); }
-
-.site-footer p
-{   margin: 0.5rem 0; }
+.site-footer a { color: rgb(155, 255, 255); text-decoration: underline; }
 
 iframe {
     display: block;
@@ -1555,28 +1454,18 @@ iframe {
     max-width: 100%;
 }
 
-@media (max-width: 768px)
-{   h1 { font-size: 2.5rem; }
+/* 11. MOBILE RESPONSIVENESS */
+@media (max-width: 768px) {
+    h1 { font-size: 2.5rem; }
     h2 { font-size: 1.75rem; }
-    .header-content
-{       flex-direction: column;
-        height: auto;
-        padding: 15px 0; }
-    .main-nav
-{       margin: 15px 0; }
-    .main-nav a
-{       margin: 0 10px; }
-    .cta-buttons
-{       flex-wrap: wrap;
-        flex-direction: row; }
-    .intro-content-box
-{       background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)),
-                          url('images/alec_gargett_adelaide_oval_torrens_river_202303_cropped.jpg');
-        background-size: cover;
-        background-position: right 25%; }
-    .intro-content-box.smile
-{       background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-                          url('images/alec_gargett_adelaide_oval_torrens_river_202303_smile_cropped.jpg'); } }
+    .header-content { flex-direction: column; height: auto; padding: 15px 0; }
+    .main-nav { margin: 15px 0; }
+    .main-nav a { margin: 0 5px; font-size: 0.9rem; }
+    
+    .intro-content-box {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/alec_gargett_adelaide_oval_torrens_river_202303_cropped.jpg');
+    }
+}
 </style>
 
 <script defer src="https://cdn.counter.dev/script.js" data-id="9cb95797-dd6c-4b86-ab11-90a4e37567d3" data-utcoffset="11"></script>
