--- a/index.html
+++ b/index.html
@@ -307,6 +307,17 @@ The most important ideas behind my campaign are explained in the 90-second video
 
 <h2>My initial policies</h2>
 
+<p>Most people won't have the time to read all 7000 words of my policy detail, so here are some of the highlights:</p>
+
+<ul>
+    <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a prime limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
+    <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and blocking out of views of nature by lower quality housing.</li>
+    <li>Make our algae science independent from polluting industries. Currently there are conflicts of interest.</li>
+    <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
+    <li>Oppose new wasteful spending by political parties like Labor's 200-million-dollar failed hydrogen project.</li>
+    <li>Call out the federal government on all of their failures.</li>
+</ul>
+
 <p>Since I will work for the people of Waite, my priorities have to be determined by the people of Waite. I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
 <p>If I'm elected, I will continue to develop these policies, make more short videos to explain each of them, and add a comment section to this website so that others can contribute.</p>
