--- a/index.html
+++ b/index.html
@@ -126,20 +126,18 @@
  I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.<br>
  I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament, and now I have a plan.</p>
 
-<p>My full plan is summarised in this 10,000 word website, but not everyone has the time for that, so here are some of the highlights:</p>
+<p>My full plan is summarised in this 10,000 word website. Not everyone has the time for that, so here are some of the highlights:</p>
 
 <ul>
     <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a prime limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
     <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and blocking out of views of nature by lower quality housing.</li>
     <li>Make our algae science independent from polluting industries. Currently there are conflicts of interest.</li>
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
-    <li>Oppose new wasteful spending by political parties like Labor's 200-million-dollar failed hydrogen project.</li>
+    <li>Oppose new wasteful spending by political parties like Labor's 200-million-dollar failed hydrogen project and more.</li>
     <li>Call out the federal government on all of their failures.</li>
 </ul>
 
-<p>Now of course I think those policies are pretty good, but the fact voters don't look deeper than the superficial policy pitches that political parties use is actually part of the problem.</p>
-
-<p>No politician can implement government policy by themselves. We can only contribute to improving government policy by thinking independently about it.</p>
+<p>Of course, no politician can implement government policy by themselves. We can only contribute to improving government policy by thinking independently about it.</p>
 
 <p>What actually matters is the demonstrated quality of independent thinking from the candidate, because if everyone voted that way, we'd have better candidates running for election across the country.</p>
 
