--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
  I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.<br>
  I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament, and now I have a plan.</p>
 
-<p>Not everyone has the time to read my full 10,000 word plan, so here are some of the highlights:</p>
+<p>Not everyone has the time to read the full 10,000 word plan, so here are some of the highlights:</p>
 
 <ul>
     <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a prime limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
