--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
 
 <iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
- I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.<br>
- I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament, and now I have a plan.</p>
+<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite, and I have plan to for an affordable, sustainable economy, ending the out-of-touch dependence on unsustianable growth.</p>
+
+<p>I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.
+ <br>I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.
+ <br>On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament, and now I have a plan.</p>
 
 <p>Not everyone has the time to read the full 10,000 word plan, so here are some of the highlights:</p>
 
@@ -137,11 +139,10 @@
     <li>Call out the federal government on all of their failures.</li>
 </ul>
 
-<p>Of course, no politician can implement government policy by themselves. We can only contribute to improving government policy by thinking independently about it.</p>
+<p>Even better though, I have a plan to make parliament more competent at both state and federal levels, and I need your help.</p>
 
-<p>What actually matters is the demonstrated quality of independent thinking from the candidate, because if everyone voted that way, we'd have better candidates running for election across the country.</p>
-
-<p class="cta">So take a moment to determine which of your candidates is doing the best independent thinking, and if you think that's me, then I'd appreciate your support as your Independent for Waite.</p>
+<p>Watch a few of my videos or skim through my website and decide for yourself which candidate has the problem soliving skills and analytical skills that are most lacking from parliament.
+<br>If you think that's me, then I'd appreciate your support as your Independent for Waite.</p>
 
 <h2>InDaily article</h2>
 
