--- a/index.html
+++ b/index.html
@@ -122,26 +122,26 @@
 
 <iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite, and I have plan to for an affordable, sustainable economy, ending the out-of-touch dependence on unsustianable growth.</p>
+<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite, and I have plan for an affordable, sustainable economy, ending the out-of-touch dependence on unsustainable growth.</p>
 
 <p>I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.
  <br>I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.
- <br>On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament, and now I have a plan.</p>
+ <br>On top of this, I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament, and now I have a plan.</p>
 
-<p>Not everyone has the time to read the full 10,000 word plan, so here are some of the highlights:</p>
+<p>Not everyone has the time to read the full 10,000-word plan, so here are some of the highlights:</p>
 
 <ul>
-    <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a prime limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
+    <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a price limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
     <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and blocking out of views of nature by lower quality housing.</li>
     <li>Make our algae science independent from polluting industries. Currently there are conflicts of interest.</li>
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
-    <li>Oppose new wasteful spending by political parties like Labor's 200-million-dollar failed hydrogen project and more.</li>
+    <li>Oppose new wasteful spending by political parties like Labor's $285 million failed hydrogen project and more.</li>
     <li>Call out the federal government on all of their failures.</li>
 </ul>
 
-<p>Even better though, I have a plan to make parliament more competent at both state and federal levels, and I need your help.</p>
+<p>Even better though, I have a plan to make Parliament more competent at both state and federal levels, and I need your help.</p>
 
-<p>Watch a few of my videos or skim through my website and decide for yourself which candidate has the problem soliving skills and analytical skills that are most lacking from parliament.
+<p>Watch a few of my videos or skim through my website and decide for yourself which candidate has the problem-solving skills and analytical skills that are most lacking from parliament.
 <br>If you think that's me, then I'd appreciate your support as your Independent for Waite.</p>
 
 <h2>InDaily article</h2>
