--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <li>Call out the federal government on all of their failures.</li>
 </ul>
 
-<p>Even better though, I have a plan to make Parliament more competent at both state and federal levels, and I need your help.</p>
+<p>Even better though, I have a plan to make parliament more competent at both state and federal levels, and I need your help.</p>
 
 <p>Watch a few of my videos or skim through my website and decide for yourself which candidate has the problem-solving skills and analytical skills that are most lacking from parliament.
 <br>If you think that's me, then I'd appreciate your support as your Independent for Waite.</p>
