--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite, and I have plan for an affordable, sustainable economy, ending the out-of-touch dependence on unsustainable growth.</p>
+<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite, and I have a plan for an affordable, sustainable economy, ending the out-of-touch dependence on unsustainable growth.</p>
 
 <p>I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.
  <br>I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.
