--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ The most important ideas behind my campaign are explained in the 90-second video
 <p>Most people won't have the time to read all 7000 words of my policy detail, so here are some of the highlights:</p>
 
 <ul>
-    <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a prime limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
+    <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a price limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
     <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and blocking out of views of nature by lower quality housing.</li>
     <li>Make our algae science independent from polluting industries. Currently there are conflicts of interest.</li>
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
