--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@ The most important ideas behind my campaign are explained in the 90-second video
  <li>Put the EPA in charge of the science communication, and give them the resources to do this.</li>
 </ul>
 
-<p>The EPA so far have done a much better job of communicating the <a href="https://www.epa.sa.gov.au/environmental_info/water_quality/harmful-algal-blooms">causes of harmful algal blooms</a>, and have admitted that nutrient pollution is generally is a major factor, but even they have not mentioned the contribution of our own sewage water and agricultural runoff, which were both mentioned in the 2000 federal <a href="https://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Environment_and_Communications/Completed_inquiries/1999-02/gulf/report/c03">Inquiry into Gulf St Vincent.</a></p>
+<p>The EPA so far have done a much better job of communicating the <a href="https://www.epa.sa.gov.au/environmental_info/water_quality/harmful-algal-blooms">causes of harmful algal blooms</a>, and have admitted that nutrient pollution in general is a major factor, but even they have not mentioned the contribution of our own sewage water and agricultural runoff, which were both mentioned in the 2000 federal <a href="https://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Environment_and_Communications/Completed_inquiries/1999-02/gulf/report/c03">Inquiry into Gulf St Vincent.</a></p>
 
 <iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
