--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ The most important ideas behind my campaign are explained in the 90-second video
   <li>Use the platform of parliament to better advocate for our state and our electorate;</li>
  </ul>
 
- <p>Perhaps even more importantly, whether I win or not, your vote will send a message to the State Parliament, the federal parliament, and potential candidates across Australia about the quality of policy thinking, problem solving and political system that Australians want to see.</p>
+ <p>Perhaps even more importantly, whether I win or not, your vote will send a message to State Parliament, Federal Parliament, and potential candidates across Australia about the quality of policy thinking, problem solving and political system that Australians want to see.</p>
 
  <p>The only thing we need to solve all of the above crises is better policy,<br>
  and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
