--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <img class="responsive-width" src="images/comparison_ad.png" alt="Alec Gargett comparison with Labor, Greens, One Nation and the Liberals"></img>
 
-<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite, and I have a plan for an affordable, sustainable economy, ending the out-of-touch dependence on unsustainable growth and pollution.</p>
+<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite, and I have a plan for an affordable, sustainable economy, ending the out-of-touch dependence on unsustainable growth, pollution and rising prices.</p>
 
 <p>I was born at Blackwood Hospital in 1988 and have spent almost all of my life in Waite.
  <br>I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.
