--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <p>Not everyone has the time to read the full 10,000-word plan, so here are some of the highlights:</p>
 
 <ul>
-    <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a price limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
+    <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a price limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades, including electrification.</li>
     <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and blocking out of views of nature by lower quality housing.</li>
     <li>Make our algae science independent from polluting industries. Currently there are conflicts of interest.</li>
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
