--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 <ul>
     <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a price limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades, including electrification.</li>
     <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and blocking out of views of nature by lower quality housing.</li>
-    <li>Make our algae science independent from polluting industries. Currently there are conflicts of interest.</li>
+    <li>Make our algae science independent from polluting industries and political bias. Currently there are conflicts of interest.</li>
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
     <li>Oppose new wasteful spending by political parties like Labor's $285 million failed hydrogen project and more.</li>
-    <li>Call out the federal government on all of their failures.</li>
+    <li>Call out the federal government on all of their failures, including indadequate funding for the states, extreme growth, pollution and rising prices</li>
 </ul>
 
 <p>Even better though, I have a plan to make parliament more competent at both state and federal levels, and I need your help.</p>
