--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <li>Make our algae science independent from polluting industries and political bias. Currently there are conflicts of interest.</li>
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
     <li>Oppose new wasteful spending by political parties like Labor's $285 million failed hydrogen project and more.</li>
-    <li>Call out the federal government on all of their failures, including indadequate funding for the states, extreme growth, pollution and rising prices</li>
+    <li>Use State Parliament to call out the federal government on all of their failures, including indadequate funding for the states, extreme growth, pollution and rising prices</li>
 </ul>
 
 <p>Even better though, I have a plan to make parliament more competent at both state and federal levels, and I need your help.</p>
